(homepage): add location and footer, then fix navbar z-index

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -670,6 +670,24 @@ select {
 .z-50 {
   z-index: 50;
 }
+.-z-10 {
+  z-index: -10;
+}
+.-z-0 {
+  z-index: 0;
+}
+.z-\[999\] {
+  z-index: 999;
+}
+.z-\[9999\] {
+  z-index: 9999;
+}
+.z-\[1000\] {
+  z-index: 1000;
+}
+.z-\[2000\] {
+  z-index: 2000;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -738,6 +756,9 @@ select {
 .mb-\[64px\] {
   margin-bottom: 64px;
 }
+.mt-\[120px\] {
+  margin-top: 120px;
+}
 .block {
   display: block;
 }
@@ -785,6 +806,15 @@ select {
 }
 .h-9 {
   height: 2.25rem;
+}
+.h-\[560px\] {
+  height: 560px;
+}
+.h-\[35rem\] {
+  height: 35rem;
+}
+.h-\[25rem\] {
+  height: 25rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -835,6 +865,9 @@ select {
 }
 .max-w-\[15rem\] {
   max-width: 15rem;
+}
+.max-w-xs {
+  max-width: 20rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -968,6 +1001,38 @@ select {
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
+}
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
+.gap-y-0\.5 {
+  row-gap: 0.125rem;
+}
+.gap-y-0 {
+  row-gap: 0px;
+}
+.gap-y-1 {
+  row-gap: 0.25rem;
+}
+.gap-y-6 {
+  row-gap: 1.5rem;
+}
+.gap-y-4 {
+  row-gap: 1rem;
+}
+.gap-y-3 {
+  row-gap: 0.75rem;
+}
+.gap-x-36 {
+  -moz-column-gap: 9rem;
+       column-gap: 9rem;
+}
+.gap-y-5 {
+  row-gap: 1.25rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1141,6 +1206,22 @@ select {
   padding-top: 0px;
   padding-bottom: 0px;
 }
+.px-\[100px\] {
+  padding-left: 100px;
+  padding-right: 100px;
+}
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -1164,6 +1245,9 @@ select {
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pt-\[60px\] {
+  padding-top: 60px;
 }
 .text-center {
   text-align: center;
@@ -1264,6 +1348,12 @@ select {
 }
 .tracking-\[-0\.021em\] {
   letter-spacing: -0.021em;
+}
+.tracking-\[-0\.019em\] {
+  letter-spacing: -0.019em;
+}
+.tracking-\[-0\.011em\] {
+  letter-spacing: -0.011em;
 }
 .text-gray-500 {
   --tw-text-opacity: 1;
@@ -1693,6 +1783,11 @@ select {
     padding-right: 1.5rem;
   }
 
+  .sm\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
   .sm\:pt-0 {
     padding-top: 0px;
   }
@@ -1729,6 +1824,21 @@ select {
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:gap-x-10 {
+    -moz-column-gap: 2.5rem;
+         column-gap: 2.5rem;
+  }
+
+  .md\:gap-x-6 {
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
+  }
+
+  .md\:gap-x-8 {
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
 
   .md\:space-x-10 > :not([hidden]) ~ :not([hidden]) {
